--- a/hii].html
+++ b/hii].html
@@ -41,7 +41,7 @@
   </head>
   <body>
     <h1 class="title">CSS 전체/태그 선택자</h1><hr>
-    <h1>Lorem ipsum 안녕하세요 원진이형</h1>
+    <h1>Lorem ipsum</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>  <hr>
       <h1 class="title">CSS 아이디 선택자</h1><hr>
     <div id="header">              <h1>Header</h1> </div>
